<resources>
    <string name="app_name">Mycoffeapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="masukan_email">masukan_email</string>
    <string name="nama_pengguna">nama_pengguna</string>
    <string name="kata_sandi">kata_sandi</string>
    <string name="daftar_akun">daftar_akun</string>
    <string name="masuk">masuk</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="daily_meal">daily_meal</string>
    <string name="favourite">favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">my_cart</string>
    <string name="d_h_i_o">D H I O</string>
    <string name="dhioganteng_gmail_com">dhioganteng_gamil_com</string>
    <string name="Rakha">rakha</string>
    <string name="rakhaganteng_gmail_com">rakhaganteng_gmail_com</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_food">Search your food!</string>
    <string name="what_do_you_want">what do you want?</string>
    <string name="atlantis">atlantis</string>
    <string name="produk_name">Produk Name</string>
    <string name="coffe_nako">Coffe Nako</string>
    <string name="_10_00_23_00">_10_00_23_00</string>
    <string name="_08_00_23_00">08_00_23_00</string>
    <string name="_4_8">4.8</string>
    <string name="min_30">Min - $30</string>
    <string name="_20_00_23_00">20:00-23:00</string>
    <string name="_18_00_23_00">18:00-23:00</string>
    <string name="hello_rakha">Hello Rakha</string>
    <string name="discount">Discount</string>
    <string name="game">Game</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Register">Register</string>
    <string name="view_more">view more</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here</string>
    <string name="_10_weekend_delicius_ndinner_recipes">10 weekend Delicius \nDinner Recipes</string>
    <string name="make_order">make order</string>
    <string name="total">Total</string>
<<<<<<< HEAD
    <string name="_5_0">5.0</string>
=======
>>>>>>> 7ba663261b84211089979303eaa809cf8cb0d744
</resources>